* Add article enhancer for explosm.net to directly fetch comics
* Possible backwards incompatible change by using the link provided by simplepie instead of the user for the url hash. This prevents duplication of the feed when adding a slightly different feed url which points to the same feed and allows a speedup from O(n) to O(1) for article enhanchers

owncloud-news (1.206)
* Also handle URLErrors in updater script that are thrown when the domain of a feed is not found

owncloud-news (1.205)
* Also allow magnet urls in articles
* When jumping to the next item after the last one, also mark the last item as read

owncloud-news (1.204)
* Fix problem that caused python updater script to exit because of maximum recursion
* Add an option to testrun an update with the updater script

owncloud-news (1.203)
* Decode the title twice to fix special characters in HTML content in the title, author and email
* Scroll to the bottom once you hit the show all button to prevent tedious scrolling
* Add an API to make ownCloud cron updates optionally. This can be used to write an update script which can be threaded to dramatically speed up fetching of feeds and reduce the used memory to run the update
* Add a Python update script which threads the updates
* Make it possible to turn off cron updates
* Strip all HTML tags from the author and title
* Sanitize urls on the server side to prevent clients from being affected by XSS
* Use a default batch value for the API
* Don't fail to import OPML which uses the title instead of text attribute (i.e. OPML created by Thunderbird)

ownCloud-news (1.202)
* Fixed a bug in the API routes that would request an uneeded id when creating a feed
* Log unimportant errors on debug level instead of error level

ownCloud-news (1.201)
* Add shortcut 'o' which opens the current article in a new tab
* Speed up updating of feeds by more than 100% by not fetching favicons and unneeded https/http variants
* Moved to new RESTful API to fix API bugs