@@ -275,6 +275,14 @@ $this->create('news_api_folders_read', '/api/v1-2/folders/{folderId}/read')->put
 /**
  * Feed API
  */
+
+$this->create('news_api_cors', '/api/v1-2/{path}')->method('options')->action(
+	function($params) {
+		return App::main('NewsAPI', 'cors', $params, new DIContainer());
+	}
+)->requirements(array('path', '.+'));
+
+
 $this->create('news_api_feeds_get_all', '/api/v1-2/feeds')->get()->action(
 	function($params) {
 		return App::main('FeedAPI', 'getAll', $params, new DIContainer());
